--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
+    "vue-google-charts": "^1.1.0",
     "vue-i18n": "9",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
